--- a/style/style2.css
+++ b/style/style2.css
@@ -120,7 +120,6 @@ p {
   width: 60px;
   height: 60px;
   margin-left: 10px;
-
 }
 h1 {
   font-size: 40px;
@@ -264,7 +263,8 @@ h1 {
   width: 100%;
 }
 .activity-title{
-  margin-right: 10%;
+  text-align: center;
+  margin-left: 5%;
 }
 .activity-top-part{
   justify-content: space-between;
